create readme and errors message

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         --border-radius:6px;
         --primary-color:#3B82F6;
         --primary-color-text:#ffffff;
+        --red-600: #d9342b;
         --surface-ground:#eff3f8;
         --surface-section:#ffffff;
         --surface-card:#ffffff;
